feat/2045: api optimization attendance | Phase 02